<resources>
    <string name="app_name">Scientific calculator</string>
    <string name="Tast1_Title">НАУЧНЫЙ КАЛЬКУЛЯТОР</string>
    <string name="runCalculatorButton_Text">Запустить</string>
    <string name="solveTask1_Text"><HTML>\tКалькулятор создан в виде часового циферблата. Поэтому для его реализации выбран макет ConstraintLayout. В нём есть удобная возможность использовать полярную систему координат. Она пригодилась для размещения цифр от 0 до 9 по окружности, а также других дополнительных элементов калькулятора. Все ошибки в арифметических операциях логика калькулятора учитывает, т.е. там, где операцию выполнить нельзя, он её просто не выполняет. Пока уведомление об этом не выводится.</HTML></string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_divide">/</string>
    <string name="_minus">-</string>
    <string name="_zapitay">,</string>
    <string name="_equal">=</string>
    <string name="_multiply">*</string>
    <string name="_plus">+</string>
    <string name="_bracket_open">(</string>
    <string name="_bracket_close">)</string>
    <string name="_percent">%</string>
    <string name="_plus_minus">+/-</string>
    <string name="_stepen">x^n</string>
    <string name="_sqrt">Кx</string>
    <string name="_backspaceTwo"><![CDATA[<--]]></string>
    <string name="_backspace">C</string>
    <string name="InputHistory_text"></string>
    <string name="RESULT_text"></string>
    <string name="_backspaceOne"><![CDATA[<-]]></string>
    <string name="_settings">Настройки</string>
    <string name="title_menu_themes_text">Выберите тему оформления экрана:</string>
</resources>